src/test/ui/error-codes/E0610.stderr
error[E0610]: `{integer}` is a primitive type and therefore doesn't have fields
  --> $DIR/E0610.rs:13:15
   |
LL |     let _ = x.foo; //~ ERROR E0610
   |               ^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0610"
